modified h1 size in main.css

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,8 @@
  * #66D7D1 - Tiffany Blue
  * #403D58 - English Violet
  * #DBD56E - Straw
- */
+ babaloooooo 
+ */ 
 
 :root {
     font-family: sans-serif;
